--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ведущий</title>
-
+    <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
+    
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -28,14 +30,23 @@
 
         <!-- Модальные окна -->
         <dialog id="modal-gallery">
-            <img id="modal-image" src="" alt="">
+            <div class="slider-intro intro__block" id="modal-content">
+
+            </div>
+
+            <!-- <img id="modal-image" src="" alt="">
             <div id="modal-controls">
                 <button id="prevImg">&lt;</button>
                 <button id="nextImg">&gt;</button>
-            </div>
+            </div> -->
             <span id="modal-close">&times;</span>
         </dialog>
 
     <script src="./gallery.js"></script>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="./slick/slick.min.js"></script>
+    <script src="./slider.js"></script>
 </body>
 </html>
