--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
-
     <link rel="stylesheet" href="./css/main.min.css">
+
 
 </head>
 
@@ -52,7 +52,7 @@
             <!-- Intro -->
             <section class='intro'>
 
-                <div class="intro__block slider">
+                <div class="intro__block slider-intro">
                     <div class="slider__item">
                         <picture class='slider__pic'>
                             <!-- <source type='image/avif' srcset='./images/.avif'>
@@ -315,25 +315,30 @@
 
 
     <!-- Модальные окна -->
-    <dialog id="modal-gallery">
-        <img id="modal-image" src="" alt="">
+    <dialog id="modal-gallery" >
+        <div class="intro__block slider-intro " id="modal-content">
+
+        </div>
+
+        <!-- <img id="modal-image" src="" alt="">
         <div id="modal-controls">
             <button id="prevImg">&lt;</button>
             <button id="nextImg">&gt;</button>
-        </div>
+        </div> -->
         <span id="modal-close">&times;</span>
     </dialog>
 
     <!-- JS -->
+
     <script src="./gallery.js"></script>
     <script src="./reviews.js"></script>
     <script src="./script.js"></script>
-
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="./slick/slick.min.js"></script>
     <script src="./slider.js"></script>
+
 </body>
 
 </html>
