--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <title>Ведущий</title>
     <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
-    
+
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -29,18 +29,12 @@
     </div>
 
         <!-- Модальные окна -->
-        <dialog id="modal-gallery">
-            <div class="slider-intro intro__block" id="modal-content">
+          <dialog id="modal-gallery" >
+        <div class=" slider-modal " id="modal-content">
+        </div>
+        <span id="modal-close">&times;</span>
+    </dialog>
 
-            </div>
-
-            <!-- <img id="modal-image" src="" alt="">
-            <div id="modal-controls">
-                <button id="prevImg">&lt;</button>
-                <button id="nextImg">&gt;</button>
-            </div> -->
-            <span id="modal-close">&times;</span>
-        </dialog>
 
     <script src="./gallery.js"></script>
 
