--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ведущий</title>
 
+    <link rel="icon" type="image/png" href="./icons//favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./icons/favicon.svg" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./icons//apple-touch-icon.png" />
+    <link rel="manifest" href="./site.webmanifest" />
 
     <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
@@ -316,22 +321,14 @@
 
     <!-- Модальные окна -->
     <dialog id="modal-gallery" >
-        <div class="intro__block slider-intro " id="modal-content">
-
+        <div class="slider-modal " id="modal-content">
         </div>
-
-        <!-- <img id="modal-image" src="" alt="">
-        <div id="modal-controls">
-            <button id="prevImg">&lt;</button>
-            <button id="nextImg">&gt;</button>
-        </div> -->
         <span id="modal-close">&times;</span>
     </dialog>
 
     <!-- JS -->
 
     <script src="./gallery.js"></script>
-    <script src="./reviews.js"></script>
     <script src="./script.js"></script>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
