--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     </ul>
                 </section>
 
-                <form action="#" method="POST" class="book footer__block">
+                <!-- <form action="#" method="POST" class="book footer__block">
 
                     <h2 class="footer__title">Забронировать дату</h2>
                     <label class="book__lbl">
@@ -313,7 +313,7 @@
                         <span class="book__span">*</span>
                     </label>
                     <button type="submit" class="book__btn" name="btnSend">Отправить</button>
-                </form>
+                </form> -->
             </div>
         </footer>
     </div>
