--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
 
         <main class="main main_gallery">
             <h1 class="main__title">Моя галерея</h1>
-            <a href="./index.html" class=" btn-link btn-link_pink">назад</a>
+            <a href="./index.html" class=" btn-link btn-link_pink-hover-light">назад</a>
 
             <div class='gallery gallery_page'>
                 <div class="container gallery__inner">
