--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <picture class='slider-pic'>
                             <!-- <source type='image/avif' srcset='./images/.avif'>
                             <source type='image/webp' srcset='./images/.webp'> -->
-                            <img class="slider-img" src='./images/gallery/1.png' alt=''>
+                            <img class="slider-img" src='./images/intro/1.jpg' alt=''>
                         </picture>
 
                     </div>
@@ -72,7 +72,43 @@
                             <!-- <source type='image/avif' srcset='./images/.avif'>
                             <source type='image/webp' srcset='./images/.webp'> -->
                             <img class="slider-img"
-                                src='./images/gallery/125499-neon-illustracia-beskonechnost-tehnologia-tehnologii-3840x2160.jpg'
+                            src='./images/intro/2.jpg'
+                                alt=''>
+                        </picture>
+                    </div>
+                    <div class="slider-item">
+                        <picture class='slider-pic'>
+                            <!-- <source type='image/avif' srcset='./images/.avif'>
+                            <source type='image/webp' srcset='./images/.webp'> -->
+                            <img class="slider-img"
+                            src='./images/intro/4.jpg'
+                                alt=''>
+                        </picture>
+                    </div>
+                    <div class="slider-item">
+                        <picture class='slider-pic'>
+                            <!-- <source type='image/avif' srcset='./images/.avif'>
+                            <source type='image/webp' srcset='./images/.webp'> -->
+                            <img class="slider-img"
+                            src='./images/intro/3.jpg'
+                                alt=''>
+                        </picture>
+                    </div>
+                    <div class="slider-item">
+                        <picture class='slider-pic'>
+                            <!-- <source type='image/avif' srcset='./images/.avif'>
+                            <source type='image/webp' srcset='./images/.webp'> -->
+                            <img class="slider-img"
+                            src='./images/intro/5.jpg'
+                                alt=''>
+                        </picture>
+                    </div>
+                    <div class="slider-item">
+                        <picture class='slider-pic'>
+                            <!-- <source type='image/avif' srcset='./images/.avif'>
+                            <source type='image/webp' srcset='./images/.webp'> -->
+                            <img class="slider-img"
+                            src='./images/intro/6.jpg'
                                 alt=''>
                         </picture>
                     </div>
