--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <dialog id="modal-gallery">
         <div class="slider-modal " id="modal-content">
         </div>
-        <span id="modal-close">&times;</span>
+        <span id="modal-close" class="elem-close"><svg viewBox="0 0 32 32" class="elem-close__cross"><line class="elem-close__cross__line" x1="7" x2="25" y1="7" y2="25"/><line class="elem-close__cross__line" x1="7" x2="25" y1="25" y2="7"/></svg></span>
     </dialog>
 
     <!-- JS -->
