--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
             <!-- Intro -->
             <section class='intro'>
+                <div class="intro-left">
 
                 <div class="intro__block slider-intro">
                     <div class="slider-item">
@@ -112,7 +113,7 @@
                                 alt=''>
                         </picture>
                     </div>
-
+                </div>
                 </div>
                 <div class="intro__content">
                     <div class="intro__content__container">
