--- a/index.html
+++ b/index.html
@@ -122,29 +122,10 @@
                             А еще обожаю вкусно готовить, путешествовать и всесторонне развиваться. Прошла курсы
                             свадебного организатора и смогу помочь вам справиться со всеми вопросами при подготовке.
                         </p>
-                        <p class="intro__text">Провожу мероприятия: </p>
-                        <ul class="intro__list">
-                            <li class="intro__item">
-                                искренне
-                            </li>
-                            <li class="intro__item">
-                                стильно и современно
-                            </li>
-                            <li class="intro__item">
-                                зажигательно </li>
-                            <li class="intro__item">
-                                без пошлых конкурсов </li>
-                            <li class="intro__item">
-                                с учетом ваших пожеланий и предпочтений </li>
-                            <li class="intro__item">
-                                с соблюдением традиций </li>
-                            <li class="intro__item">
-                                с персонализированными интерактивами и крутыми фишками </li>
-                            <li class="intro__item">
-                                с подарками и сюрпризами</li>
-                        </ul>
+
                         <p class="intro__text">Со мной в команде диджей с профессиональным звуковым оборудованием. </p>
-                        <a href="tel:+79509171333" class="intro__btn btn-link btn-link_pink-hover-light">СВЯЖИТЕСЬ СО МНОЙ</a>
+                        <a href="tel:+79509171333" class="intro__btn btn-link btn-link_pink-hover-light">СВЯЖИТЕСЬ СО
+                            МНОЙ</a>
                     </div>
                 </div>
             </section> <!-- /intro -->
@@ -261,6 +242,45 @@
                 </div>
 
             </section><!-- /services -->
+
+            <!-- how -->
+            <section class='how container'>
+                <h2 class="title">Провожу мероприятия</h2>
+
+                <div class="how__content">
+
+                    <div class="how__row">
+                        <span class="how__item">
+                            искренне
+                        </span>
+                        <span class="how__item">
+                            с персонализированными интерактивами и крутыми фишками </span>
+                    </div>
+
+                    <div class="how__row">
+                        <span class="how__item">
+                            с учетом ваших пожеланий и предпочтений </span>
+                        <span class="how__item">
+                            зажигательно </span>
+                    </div>
+
+                    <div class="how__row">
+                        <span class="how__item">
+                            без пошлых конкурсов </span>
+                        <span class="how__item">
+                            с соблюдением традиций </span>
+                    </div>
+
+                    <div class="how__row">
+                        <span class="how__item">
+                            с подарками и сюрпризами</span>
+                        <span class="how__item">
+                            стильно и современно
+                        </span>
+                    </div>
+
+                </div>
+            </section> <!-- /how -->
 
             <!-- Separator -->
             <section class='separator '>
@@ -505,6 +525,7 @@
 
     <script src="./gallery.js"></script>
     <script src="./script.js"></script>
+    <script src="./how.js"></script>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
