анимация how и intro_content

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
     <script src="./gallery.js"></script>
     <script src="./script.js"></script>
-    <script src="./how.js"></script>
+    <script src="./scroll-animation.js"></script>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
