rotate services and some animation in inner

--- a/index.html
+++ b/index.html
@@ -138,107 +138,138 @@
 
 
                     <article class="service">
-                        <picture>
-                            <source type='image/avif' srcset='./images/services/2.avif'>
-                            <source type='image/webp' srcset='./images/services/2.webp'>
-                            <img class='service__pic' src='./images/services/2.jpg' alt=''>
-                        </picture>
-                        <div class="service__content">
-                            <h3 class="service__title">
-                                Свадебные торжества
-                            </h3>
-                            <span class="service__price">
-                                от 15 000 руб.
-                            </span>
-                            <p class="service__text">
-                                Вы мечтаете о уютной камерной свадьбе или свадебной вечеринке? Я – свадебный ведущий,
-                                готовый превратить вашу мечту в реальность. Нестандартные сценарии, импровизация,
-                                чувство юмора – все это гарантирует создание неповторимой атмосферы для вас и ваших
-                                гостей.
-                            <ul class="service__list">
-                                <li class='service__item'>Индивидуальный подход: Мы разработаем сценарий, который
-                                    отразит вашу уникальную
-                                    историю любви.</li>
-                                <li class='service__item'>Профессионализм: Я знаю, как управлять процессом и делать ваше
-                                    торжество плавным и
-                                    организованным.</li>
-                                <li class='service__item'>Эмоциональный настрой: Помогу вам создать атмосферу, которая
-                                    запомнится на всю
-                                    жизнь.</li>
-                                <li class='service__item'>Работа с эмоциями: Понимаю, как в нужный момент поднять
-                                    настроение и поддержать
-                                    атмосферу.</li>
-                            </ul>
-                            </p>
+                        <div class="service__inner">
+                            <div class="service__front">
+                                <picture>
+                                    <source type='image/avif' srcset='./images/services/2.avif'>
+                                    <source type='image/webp' srcset='./images/services/2.webp'>
+                                    <img class='service__pic' src='./images/services/2.jpg' alt=''>
+                                </picture>
+                                <div class="service__content">
+                                    <h3 class="service__title">
+                                        Свадебные торжества
+                                    </h3>
+                                    <span class="service__price">
+                                        от 15 000 руб.
+                                    </span>
+                                    <p class="service__text">
+                                        Вы мечтаете о уютной камерной свадьбе или свадебной вечеринке? Я – свадебный
+                                        ведущий,
+                                        готовый превратить вашу мечту в реальность. Нестандартные сценарии,
+                                        импровизация,
+                                        чувство юмора – все это гарантирует создание неповторимой атмосферы для вас и
+                                        ваших
+                                        гостей.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="service__back">
+                                <ul class="service__list">
+                                    <li class='service__item'>Индивидуальный подход: Мы разработаем сценарий, который
+                                        отразит вашу уникальную
+                                        историю любви.</li>
+                                    <li class='service__item'>Профессионализм: Я знаю, как управлять процессом и делать
+                                        ваше
+                                        торжество плавным и
+                                        организованным.</li>
+                                    <li class='service__item'>Эмоциональный настрой: Помогу вам создать атмосферу,
+                                        которая
+                                        запомнится на всю
+                                        жизнь.</li>
+                                    <li class='service__item'>Работа с эмоциями: Понимаю, как в нужный момент поднять
+                                        настроение и поддержать
+                                        атмосферу.</li>
+                                </ul>
+                            </div>
                         </div>
                     </article>
 
                     <article class="service">
-                        <picture>
-                            <source type='image/avif' srcset='./images/services/3.avif'>
-                            <source type='image/webp' srcset='./images/services/3.webp'>
-                            <img class='service__pic' src='./images/services/3.jpg' alt=''>
-                        </picture>
-                        <div class="service__content">
-                            <h3 class="service__title">
-                                Юбилеи, дни рождения
-                            </h3>
-                            <span class="service__price">
-                                от 9 000 руб.
-                            </span>
-                            <p class="service__text">
-                                День рождения или юбилей? Вместо стандартных сценариев, мы вместе разработаем программу,
-                                отражающую личность именинника и его пожелания.
-                            <ul class="service__list">
-                                <li class='service__item'>Индивидуальный подход: Каждое празднование – уникальное. Я
-                                    адаптируюсь под ваш
-                                    бюджет и предпочтения.</li>
-                                <li class='service__item'>Оригинальные конкурсы: Разработаю конкурсы, учитывающие
-                                    возраст и интересы
-                                    именинника и гостей.</li>
-                                <li class='service__item'>Эмоции и впечатления: Создам атмосферу, которая запомнится на
-                                    долгие годы.</li>
-                                <li class='service__item'>Разнообразие форматов: От уютных семейных вечеринок до
-                                    масштабных празднований.</li>
-                            </ul>
-                            </p>
+                        <div class="service__inner">
+                            <div class="service__front">
+                                <picture>
+                                    <source type='image/avif' srcset='./images/services/3.avif'>
+                                    <source type='image/webp' srcset='./images/services/3.webp'>
+                                    <img class='service__pic' src='./images/services/3.jpg' alt=''>
+                                </picture>
+                                <div class="service__content">
+                                    <h3 class="service__title">
+                                        Юбилеи, дни рождения
+                                    </h3>
+                                    <span class="service__price">
+                                        от 9 000 руб.
+                                    </span>
+                                    <p class="service__text">
+                                        День рождения или юбилей? Вместо стандартных сценариев, мы вместе разработаем
+                                        программу,
+                                        отражающую личность именинника и его пожелания.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="service__back">
+                                <ul class="service__list">
+                                    <li class='service__item'>Индивидуальный подход: Каждое празднование – уникальное. Я
+                                        адаптируюсь под ваш
+                                        бюджет и предпочтения.</li>
+                                    <li class='service__item'>Оригинальные конкурсы: Разработаю конкурсы, учитывающие
+                                        возраст и интересы
+                                        именинника и гостей.</li>
+                                    <li class='service__item'>Эмоции и впечатления: Создам атмосферу, которая запомнится
+                                        на
+                                        долгие годы.</li>
+                                    <li class='service__item'>Разнообразие форматов: От уютных семейных вечеринок до
+                                        масштабных празднований.</li>
+                                </ul>
+                            </div>
                         </div>
                     </article>
 
                     <article class="service ">
-                        <picture>
-                            <source type='image/avif' srcset='./images/services/1.avif'>
-                            <source type='image/webp' srcset='./images/services/1.webp'>
-                            <img class="service__pic" src='./images/services/1.jpg' alt=''>
-                        </picture>
-                        <div class="service__content">
-                            <h3 class="service__title">
-                                Корпоративные мероприятия
-                            </h3>
-                            <span class="service__price">
-                                от 10 000 руб.
-                            </span>
-                            <p class="service__text">
-                                Превращу любое мероприятие в яркое и запоминающееся событие. Опыт работы с компаниями
-                                разного масштаба. Умение адаптироваться к потребностям каждого мероприятия и создать
-                                уникальную атмосферу для ваших сотрудников. Отвечаю за организацию интерактивов, игр,
-                                развлечений и приятную атмосферу.
-                            </p>
-                            <ul class="service__list">
-                                <li class='service__item'>
-                                    Индивидуальный подход: Разрабатываю сценарий под ваши цели и бюджет.
-                                </li>
-                                <li class='service__item'>
-                                    Профессиональная подача: Комбинирую креатив и импровизацию для максимального
-                                    эффекта.
-                                </li>
-                                <li class='service__item'>
-                                    Уникальные интерактивы и игры: Забота о том, чтобы развлечения были интересны именно
-                                    вашему коллективу.
-                                </li>
-                            </ul>
+                        <div class="service__inner">
+                            <div class="service__front">
+                                <picture>
+                                    <source type='image/avif' srcset='./images/services/1.avif'>
+                                    <source type='image/webp' srcset='./images/services/1.webp'>
+                                    <img class="service__pic" src='./images/services/1.jpg' alt=''>
+                                </picture>
+                                <div class="service__content">
+                                    <h3 class="service__title">
+                                        Корпоративные мероприятия
+                                    </h3>
+                                    <span class="service__price">
+                                        от 10 000 руб.
+                                    </span>
+                                    <p class="service__text">
+                                        Превращу любое мероприятие в яркое и запоминающееся событие. Опыт работы с
+                                        компаниями
+                                        разного масштаба. Умение адаптироваться к потребностям каждого мероприятия и
+                                        создать
+                                        уникальную атмосферу для ваших сотрудников. Отвечаю за организацию интерактивов,
+                                        игр,
+                                        развлечений и приятную атмосферу.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="service__back">
+                                <ul class="service__list">
+                                    <li class='service__item'>
+                                        Индивидуальный подход: Разрабатываю сценарий под ваши цели и бюджет.
+                                    </li>
+                                    <li class='service__item'>
+                                        Профессиональная подача: Комбинирую креатив и импровизацию для максимального
+                                        эффекта.
+                                    </li>
+                                    <li class='service__item'>
+                                        Уникальные интерактивы и игры: Забота о том, чтобы развлечения были интересны
+                                        именно
+                                        вашему коллективу.
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </article>
+
+                   
                 </div>
 
             </section><!-- /services -->
