стили для page-gallery

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             крутые эмоции.
                             Веду мероприятия с 2018 года!
                             Со мной все пройдёт на высшем уровне, а ваши родные и близкие будут еще долго вспоминать
-                            мероприятие!</p>
+                            праздник!</p>
                         <p class="intro__text">
                             Немного обо мне: жена и мама, преподаватель и будущий кандидат педагогических наук, поэтому
                             тонко чувствую людей и найду общий язык с каждым гостем!
