упорядочивание scripts настройка header и footer в галлерее

--- a/gallery.html
+++ b/gallery.html
@@ -23,16 +23,19 @@
                 <nav class="nav" id="nav">
                     <ul class="menu">
                         <li class="menu__item">
-                            <a class="menu__link " href="#home" data-scroll="#">Главная</a>
+                            <a class="menu__link " href="/index.html" data-scroll="#">Главная</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#services" data-scroll="#">Услуги</a>
+                            <a class="menu__link" href="/index.html?#services" data-scroll="#">Услуги</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#reviews" data-scroll="#">Отзывы</a>
+                            <a class="menu__link" href="/index.html?#reviews" data-scroll="#">Отзывы</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#contacts" data-scroll="">Контакты</a>
+                            <a class="menu__link" href="/index.html?#contacts" data-scroll="">Контакты</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#" data-scroll="">Галерея</a>
                         </li>
                     </ul>
                 </nav>
@@ -45,7 +48,6 @@
 
         <main class="main main_gallery">
             <h1 class="main__title">Моя галерея</h1>
-            <a href="./index.html"  class="elem-close"><svg viewBox="0 0 32 32" class="elem-close__cross"><line class="elem-close__cross__line" x1="7" x2="25" y1="7" y2="25"/><line class="elem-close__cross__line" x1="7" x2="25" y1="25" y2="7"/></svg></a>
 
             <div class='gallery gallery_page'>
                 <div class="container gallery__inner">
@@ -123,7 +125,7 @@
                     </address>
                 </section>
 
-             
+
             </div>
         </footer>
     </div> <!-- /page -->
@@ -135,7 +137,10 @@
         <span id="modal-gallery__close-btn" class="elem-close"><svg viewBox="0 0 32 32" class="elem-close__cross"><line class="elem-close__cross__line" x1="7" x2="25" y1="7" y2="25"/><line class="elem-close__cross__line" x1="7" x2="25" y1="25" y2="7"/></svg></span>
     </dialog>
 
-    <script src="./gallery.js"></script>
+
+    <script src="./js/header.js"></script>
+    <script src="./js/gallery.js"></script>
+    <script src="./js/footer.js"></script>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
