--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <nav class="nav" id="nav">
                     <ul class="menu">
                         <li class="menu__item">
-                            <a class="menu__link " href="#home" data-scroll="#">Главная</a>
+                            <a class="menu__link " href="#" data-scroll="#">Главная</a>
                         </li>
                         <li class="menu__item">
                             <a class="menu__link" href="#services" data-scroll="#">Услуги</a>
@@ -41,6 +41,9 @@
                         </li>
                         <li class="menu__item">
                             <a class="menu__link" href="#contacts" data-scroll="">Контакты</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="/gallery.html" data-scroll="">Галерея</a>
                         </li>
                     </ul>
                 </nav>
@@ -552,15 +555,19 @@
 
     <!-- JS -->
 
-    <script src="./gallery.js"></script>
-    <script src="./script.js"></script>
-    <script src="./scroll-animation.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/services.js"></script>
+    <script src="./js/present.js"></script>
+    <script src="./js/gallery.js"></script>
+    <script src="./js/footer.js"></script>
+    <script src="./js/scroll-animation.js"></script>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
     <script type="text/javascript" src="./slick/slick.min.js"></script>
-    <script src="./slider.js"></script>
+    <script src="./js/slider.js"></script>
 
 
 </body>
