--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <li class="menu__item">
                             <a class="menu__link" href="/gallery.html" data-scroll="">Галерея</a>
                         </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="/privacy.html" data-scroll="">privacy</a>
+                        </li>
                     </ul>
                 </nav>
 
